--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .content-container {
-  margin-top: 2.5%;
   margin-right: auto;
   margin-left: auto;
-  padding: 0 2%;
+  padding: 2.5% 2% 0% 2%;
   display: flex;
   flex-direction: column;
   max-width: 30em;
-  height: 100%;
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+}
+
+.center-item {
+  align-items: center;
 }
