--- a/src/styles/fun-finder.css
+++ b/src/styles/fun-finder.css
@@ -77,7 +77,6 @@
 .results-container {
   display: flex;
   flex-direction: column;
-  padding: 0.5em;
   border-radius: 4px;
   margin-top: 1em;
   overflow-y: auto;
@@ -86,6 +85,7 @@
 .day-container {
   border: 1px solid #d3d3d3;
   border-radius: 4px;
+  margin: 0.75em;
   display: flex;
   flex-direction: column;
   height: max-content;
@@ -97,4 +97,5 @@
   padding: 0.5em;
   margin-bottom: 0.5em;
   font-weight: bold;
+  font-size: 20px;
 }
