--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,6 +6,7 @@
   position: relative;
   padding: 0.5rem 0rem;
   color: #1e1f20;
+  background-color: #f3f4f8;
   box-shadow: 0 2px 8px 0px rgba(9, 9, 9, 0.23);
 }
 
