--- a/src/styles/event.css
+++ b/src/styles/event.css
@@ -1,14 +1,15 @@
 .result {
   border: 1px solid #d3d3d3;
-  border-radius: 2px;
+  border-radius: 5px;
   margin: 0.5em 1em;
+  background-color: #f3f4f8;
+  padding: 0 0.5em;
 }
 
 .result-header {
   display: flex;
   flex-direction: column;
   padding: 0.5em 1em;
-  border-bottom: 1px solid #d3d3d3;
   align-items: center;
   text-align: center;
 }
@@ -25,11 +26,14 @@
 }
 
 .result-description {
-  padding: 1em 1em;
+  padding: 0.75em 0.5em;
+  background-color: #fefefe;
+  margin: 0 0.5em;
+  border-radius: 2px;
+  border: 1px solid #d3d3d3;
 }
 
 .result-footer {
-  border-top: 1px solid #d3d3d3;
   padding: 0.5em 1em;
 }
 
